--- a/css/style_home.css
+++ b/css/style_home.css
@@ -10,6 +10,21 @@
         font-size: 500%;
     }
 
+    .TieuDe h1{
+        animation-name: animationtest_h1;
+        animation-duration: 2s;
+    }
+
+    @keyframes animationtest_h1{
+        0%{
+            opacity: 0;
+            transform: translate(40%, 0);
+        }
+        100%{
+            transform: translate(0, 0);
+        }
+    }
+
     #hinhH2C{
         float: right;
     }
@@ -66,6 +81,24 @@
         margin: 0 auto;
     }
 
+    @keyframes animationtest_btn{
+        100%{
+            transform: translate(0, -15%);
+        }
+    }
+
+    .btnHOME button:hover{
+        background-color: gray;
+        border: 2px solid white;
+        animation-name: animationtest_btn;
+        animation-duration: 2s;
+        box-shadow: 4px 4px 4px black;
+    }
+
+    .btnHOME button:hover a{
+        color: white;
+    }
+
     .btn_home{
         font-size: 25px;
         border: 2px solid gray;
@@ -82,10 +115,13 @@
         color: black;
     }
 
+    .mauxam{
+        background-color: #AFABAB;
+    }
 
-/*footer*/
-    #footer{
-        width: 100%;
-        height: 100px;
-        background-color: red;
+/* team */
+    #HS
+    {
+        display: block;
+        margin: 0 auto;
     }
